[gd_scene load_steps=13 format=3 uid="uid://dlyi3323s0he2"]

[ext_resource type="Script" path="res://GUI/score.gd" id="1_ega1d"]
[ext_resource type="Script" path="res://GUI/death_flash.gd" id="2_edai4"]
[ext_resource type="Script" path="res://GUI/end_game_container.gd" id="3_wdthu"]
[ext_resource type="Script" path="res://GUI/line_edit.gd" id="4_lskd2"]
[ext_resource type="LabelSettings" uid="uid://ds3sf3we4ypov" path="res://GUI/gui.tres" id="5_dei43"]
[ext_resource type="Script" path="res://GUI/scores_container.gd" id="7_84wij"]

[sub_resource type="LabelSettings" id="LabelSettings_5lvgx"]
font_size = 64
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0fqrb"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_7cxc8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GUI/DeathFlash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GUI/VBoxContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(960, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_d8tis"]
resource_name = "death_flash"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GUI/DeathFlash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.888889), Color(1, 1, 1, 0.777778), Color(1, 1, 1, 0.666667), Color(1, 1, 1, 0.555556), Color(1, 1, 1, 0.444444), Color(1, 1, 1, 0.333333), Color(1, 1, 1, 0.222222), Color(1, 1, 1, 0.111111), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k8qjk"]
resource_name = "restart"
length = 1.8
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GUI/VBoxContainer:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(960, -0.25, 0, 0.25, 0, 429.485, -0.793, 0.369, 0.1, 0, 436, -0.293, -0.004, 0.213, 4.224),
"times": PackedFloat32Array(0.6, 1.4, 1.8)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_agw71"]
_data = {
"RESET": SubResource("Animation_7cxc8"),
"death_flash": SubResource("Animation_d8tis"),
"restart": SubResource("Animation_k8qjk")
}

[node name="GUIContainer" type="CanvasLayer"]

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeathFlash" type="ColorRect" parent="GUI" node_paths=PackedStringArray("animation_player")]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_edai4")
animation_player = NodePath("../../FlashAnimation")

[node name="Score" type="Label" parent="GUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.5
offset_right = 18.5
offset_bottom = 88.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_5lvgx")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_ega1d")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI" node_paths=PackedStringArray("animation_player")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -137.0
offset_right = 137.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_wdthu")
animation_player = NodePath("../../GameOverAnimation")

[node name="Restart" type="Label" parent="GUI/VBoxContainer"]
layout_mode = 2
text = "Press R to Restart

"
label_settings = SubResource("LabelSettings_0fqrb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GUI/VBoxContainer"]
process_mode = 3
layout_mode = 2
placeholder_text = "Save your score!"
alignment = 1
max_length = 12
selecting_enabled = false
deselect_on_focus_loss_enabled = false
caret_blink = true
script = ExtResource("4_lskd2")

[node name="Leaderboard" type="Label" parent="GUI/VBoxContainer"]
layout_mode = 2
text = "High Scores:
"
label_settings = ExtResource("5_dei43")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoresContainer" type="VBoxContainer" parent="GUI/VBoxContainer"]
layout_mode = 2
script = ExtResource("7_84wij")

[node name="FlashAnimation" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_agw71")
}

[node name="GameOverAnimation" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_agw71")
}

[connection signal="focus_entered" from="GUI/VBoxContainer/LineEdit" to="GUI/VBoxContainer/LineEdit" method="_on_focus_entered"]
[connection signal="focus_exited" from="GUI/VBoxContainer/LineEdit" to="GUI/VBoxContainer/LineEdit" method="_on_focus_exited"]
[connection signal="text_changed" from="GUI/VBoxContainer/LineEdit" to="GUI/VBoxContainer/LineEdit" method="_on_text_changed"]
[connection signal="text_submitted" from="GUI/VBoxContainer/LineEdit" to="GUI/VBoxContainer/LineEdit" method="_on_text_submitted"]
[connection signal="update_scores" from="GUI/VBoxContainer/LineEdit" to="GUI/VBoxContainer/ScoresContainer" method="_on_line_edit_update_scores"]
